[ADD] CV and Tutorial

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "portfolio",
+  "homepage": "https://vccorimanya.github.io/portfolio",
   "version": "0.0.1",
   "description": "Personal web site",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [
     "projects",
@@ -32,6 +35,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "mini-css-extract-plugin": "^2.5.3"
   }
 }
